--- a/book_recommendtion_system.ipynb
+++ b/book_recommendtion_system.ipynb
@@ -17,7 +17,7 @@
       "cell_type": "code",
       "source": [
         "from google.colab import files\n",
-        "uploaded = files.upload()\n"
+        "uploaded = files.upload() #upload 3 csv files\n"
       ],
       "metadata": {
         "colab": {
